Fix scrollbars visibility

--- a/CellaioStudio/Client/Pages/Editor.razor.css
+++ b/CellaioStudio/Client/Pages/Editor.razor.css
@@ -25,7 +25,7 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    position: fixed;
+    position: absolute;
     background-color: rgba(0,0,0,0.7);
     z-index: 20;
 }
